fix: Decrease icon-info gap

--- a/src/components/SongDisplay.astro
+++ b/src/components/SongDisplay.astro
@@ -87,7 +87,7 @@ const data: SpotifyWebAPICurrentlyPlayingResponse = await JSON.parse(dbEntry.dat
 		display: grid;
 		width: 100%;
 		grid-template-columns: 24px 1fr;
-		gap: var(--size-2xs) var(--size-s);
+		gap: var(--size-2xs) var(--size-xs);
 	}
 
 	.cover-wrapper {
