--- a/src/components/SongDisplay.astro
+++ b/src/components/SongDisplay.astro
@@ -2,76 +2,85 @@
 import { Image } from "astro:assets";
 import DiscIcon from "@lucide/astro/icons/disc";
 import MicIcon from "@lucide/astro/icons/mic-vocal";
-import PauseIcon from "@lucide/astro/icons/pause";
-import { db, SpotifyWebAPICurrentlyPlaying, eq } from "astro:db";
-import { SpotifyWebAPI, type SpotifyWebAPICurrentlyPlayingResponse } from "@/lib/spotify/SpotifyWebAPI";
+import { db, SpotifyWebAPICurrentSong, eq } from "astro:db";
+import { SpotifyWebAPI } from "@/lib/spotify/SpotifyWebAPI";
 import Timeline from "@/components/Timeline.astro";
+import { SpotifyAccessToken } from "@/lib/spotify/SpotifyAccessToken";
+import type { SpotifyWebAPIRecentlyPlayedResponse } from "@/lib/spotify/SpotifyWebAPI";
+import type { SpotifyWebAPISong } from "@/lib/spotify/SpotifyWebAPI";
 
-const dbEntry = (await db.select().from(SpotifyWebAPICurrentlyPlaying))[0];
-const currentUTC = Date.now();
+const data = (await db.select().from(SpotifyWebAPICurrentSong))[0];
+const currentUTC = new Date();
 
-if (currentUTC > dbEntry.fetched_at + 30000) {
-	const api = new SpotifyWebAPI(dbEntry.access_token);
-	const updatedData = await api.requestCurrentlyPlaying();
+if (currentUTC > new Date(data.fetched_at + 30 * 1000)) {
+	const accessToken = new SpotifyAccessToken(data.access_token);
 
-	if (updatedData) {
-		dbEntry.data = JSON.stringify(updatedData);
-		dbEntry.access_token = api.accessToken.value;
-	} else {
-		const fallbackData: SpotifyWebAPICurrentlyPlayingResponse = JSON.parse(dbEntry.data as string);
-		fallbackData.is_playing = false;
-		dbEntry.data = JSON.stringify(fallbackData);
+	if (currentUTC > new Date(data.token_fetched_at + 3600 * 1000)) {
+		await accessToken.refreshAccessToken();
+		data.access_token = accessToken.value;
+		data.token_fetched_at = currentUTC.getTime();
 	}
 
-	dbEntry.fetched_at = currentUTC;
+	const api = new SpotifyWebAPI(accessToken);
+	const currentlyPlayingResponse = await api.requestCurrentlyPlaying();
 
-	await db.update(SpotifyWebAPICurrentlyPlaying).set(dbEntry).where(eq(SpotifyWebAPICurrentlyPlaying.data_id, 0));
+	let recentlyPlayedResponse: SpotifyWebAPIRecentlyPlayedResponse | undefined;
+	if (!currentlyPlayingResponse) {
+		recentlyPlayedResponse = await api.requestRecentlyPlayed();
+		data.is_playing = false;
+	} else {
+		data.is_playing = currentlyPlayingResponse.is_playing;
+	}
+
+	data.fetched_at = currentUTC.getTime();
+	data.song = JSON.stringify(currentlyPlayingResponse?.item) || JSON.stringify(recentlyPlayedResponse?.items[0].track);
+	data.progress_ms = currentlyPlayingResponse?.progress_ms || null;
+
+	await db.update(SpotifyWebAPICurrentSong).set(data).where(eq(SpotifyWebAPICurrentSong.id, 0));
 }
 
-const data: SpotifyWebAPICurrentlyPlayingResponse = JSON.parse(dbEntry.data as string);
+const song = JSON.parse(data.song as string) as SpotifyWebAPISong;
 ---
 
-{ data?.item &&
-<div class="song-display cflex" data-paused={!data.is_playing}>
+{ data &&
+<div class="song-display cflex" data-offline={!data.is_playing}>
 	<div class="cover-wrapper">
-		<PauseIcon stroke-width=1 class="pause-icon" />
 		<Image
 			class="song-cover"
-			src={data?.item.album.images[0].url}
-			width={data?.item.album.images[0].width}
-			height={data?.item.album.images[0].height}
+			src={song.album.images[0].url}
+			width={song.album.images[0].width}
+			height={song.album.images[0].height}
 			alt="The album cover of the currently playing song."
 			crossorigin="anonymous"
 		/>
-		<canvas />
 	</div>
 	<div class="song-information-wrapper">
 		<span class="song-title">
-			<a href={data.item.external_urls.spotify} target="_blank">
-				{data.item.name}
+			<a href={song.external_urls.spotify} target="_blank">
+				{song.name}
 			</a>
 		</span>
 		<MicIcon class="mic-svg" />
 		<div class="artists-wrapper">
 			<span>
-				{data.item.artists.map((artist, index) => (
+				{song.artists.map((artist, index) => (
 					<>
 						<a class="artist" href={artist.external_urls.spotify} target="_blank">
 							{artist.name}
 						</a>
-						{index < data.item.artists.length - 1 && <span> • </span>}
+						{index < song.artists.length - 1 && <span> • </span>}
 					</>
 				))}
 			</span>
 		</div>
 		<DiscIcon class="disc-svg" />
 		<span class="album-title-wrapper">
-			<a href={data.item.album.external_urls.spotify} target="_blank">
-				{data.item.album.name}
+			<a href={song.album.external_urls.spotify} target="_blank">
+				{song.album.name}
 			</a>
 		</span>
 	</div>
-	{data.is_playing && <Timeline data={data} fetchedAt={dbEntry.fetched_at} />}
+	{data.is_playing && <Timeline currentProgress={data?.progress_ms} fetchedAt={data.fetched_at} totalDuration={song.duration_ms} />}
 </div>
 }
 
@@ -192,59 +201,15 @@ const data: SpotifyWebAPICurrentlyPlayingResponse = JSON.parse(dbEntry.data as s
 		stroke: var(--text);
 	}
 
-	.song-display[data-paused="true"] .song-cover {
+	.song-display[data-offline="true"] .song-cover {
 		filter: grayscale();
 	}
 
-	.song-display[data-paused="true"] .song-title {
+	.song-display[data-offline="true"] .song-title a {
 		color: var(--text-muted);
 	}
 
-	.song-display[data-paused="true"] .pause-icon {
+	.song-display[data-offline="true"] .pause-icon {
 		display: initial;
 	}
 </style>
-
-<script>
-	/**
-	 * Sets the color for the SongDisplay pause icon
-	 * based on the cover colors.
-	 */
-	function setPauseIconColor() {
-		const songCover = document.querySelector<HTMLImageElement>('.song-cover')!;
-		const pauseIcon = document.querySelector<SVGElement>('.pause-icon')!;
-		const canvas = document.querySelector<HTMLCanvasElement>('.cover-wrapper canvas')!;
-		const ctx = canvas.getContext("2d")!;
-	
-		canvas.width = songCover.width;
-		canvas.height = songCover.height;
-	
-		ctx.drawImage(songCover, 0, 0);
-	
-		const hue: {
-			r: number;
-			g: number;
-			b: number;
-		}[] = []
-	
-		const start = (canvas.width - 96) / 2;
-		const end = start + 96;
-		const stepSize = 16;
-	
-		for (let i = start; i < end; i+=stepSize) {
-			for (let j = start; j < end; j+=stepSize) {
-				const [r, g, b] = ctx.getImageData(i, j, 1, 1).data;
-				hue.push({r, g, b});
-			}
-		}
-	
-		const R = hue.reduce((sum, val) => sum + val.r, 0) / hue.length;
-		const G = hue.reduce((sum, val) => sum + val.g, 0) / hue.length;
-		const B = hue.reduce((sum, val) => sum + val.b, 0) / hue.length;
-	
-		const grayscale = 0.299 * R + 0.587 * G + 0.114 * B;
-		pauseIcon.style.stroke = `hsl(240, 1%, calc(150% - ${Math.round(grayscale / 255 * 100)}%))`;
-	}
-
-	setPauseIconColor();
-</script>
