--- a/src/components/SongDisplay.astro
+++ b/src/components/SongDisplay.astro
@@ -76,51 +76,46 @@ const song = JSON.parse(data!.song) as SpotifyWebAPISong;
 
 	.cover-wrapper {
 		position: relative;
-		z-index: 0;
+		display: flex;
 		overflow: visible;
+		z-index: 0;
 	}
 
 	.song-cover {
 		aspect-ratio: 1 / 1;
 		width: 100%;
 		height: auto;
-		grid-row-start: 1;
-		z-index: 100;
 	}
 
-	/* .song-display[data-offline="false"] .cover-wrapper::before {
+	@property --angle {
+		syntax: "<angle>";
+		initial-value: 0deg;
+		inherits: false;
+	}
+
+	.song-display[data-offline="false"] .cover-wrapper::after,
+	.song-display[data-offline="false"] .cover-wrapper::before {
 		content: '';
 		position: absolute;
-		width: 100%;
 		height: 100%;
-		background-image: radial-gradient(circle at center, var(--primary), var(--bg) 150%);
-		filter: blur(1em);
-		opacity: .5;
-		top: 0;
-		left: 0;
+		width: 100%;
+		background-image: conic-gradient(from var(--angle), transparent 70%, var(--primary));
+		top: 50%;
+		left: 50%;
+		translate: -50% -50%;
 		z-index: -1;
-		animation: gradientBeat 3s ease infinite;
+		padding: 2px;
+		animation: borderRotate 6s cubic-bezier(0.55, 0.25, 0.45, 0.75) infinite;
 	}
 
-	@keyframes gradientBeat {
-		0%,
-		50% {
-			opacity: .75;
-		}
-		25%,
-		75% {
-			opacity: .5;
-		}
-		12.5%,
-		37.5%,
-		62.5%,
-		87.5% {
-			opacity: .25;
-		}
-		100% {
-			opacity: .5;
-		}
-	} */
+	.cover-wrapper::before {
+		filter: blur(.5em);
+	}
+
+	@keyframes borderRotate {
+		0% { --angle: 0deg; }
+		100% { --angle: 360deg; }
+	}
 
 	.song-title {
 		font-size: 1.5em;
