--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,25 +2,27 @@
 import Main from "@/layouts/Main.astro";
 import WebringBadge from "astro-webrings/badge";
 import SongDisplay from "@/components/SongDisplay.astro";
+import PersonalInfo from "@/components/PersonalInfo.astro";
 ---
 
 <Main title="Dominic Brauer">
-	<div class="wrapper cflex">
+	<div class="wrapper rflex">
 		<SongDisplay />
-		<div class="webrings rflex">
-			<WebringBadge site="dominicbrauer.dev" ring="built-with-astro" />
-			<WebringBadge site="dominicbrauer.dev" ring="friends-of-houston" animated />
-		</div>
+		<PersonalInfo />
+	</div>
+	<div class="webrings rflex">
+		<WebringBadge site="dominicbrauer.dev" ring="built-with-astro" />
+		<WebringBadge site="dominicbrauer.dev" ring="friends-of-houston" animated />
 	</div>
 </Main>
 
 <style>
 	.wrapper {
-		gap: 1em;
+		margin-bottom: var(--size-l);
+		gap: var(--size-l);
 	}
 
 	.webrings {
-		width: 100%;
-		justify-content: space-evenly;
+		gap: var(--size-l);
 	}
 </style>
