--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -13,6 +13,12 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<script
+			src="https://rybbit.dominicbrauer.dev/api/script.js"
+			data-site-id="322a6b9d53c0"
+			defer
+			is:inline
+		></script>
 	</head>
 	<body>
 		<NavBar />
