--- a/src/pages/test/index.astro
+++ b/src/pages/test/index.astro
@@ -3,9 +3,8 @@ import Main from "@/layouts/Main.astro";
 import { SteamWebAPI } from "@/lib/steam/SteamWebAPI";
 
 const api = new SteamWebAPI();
-const data = await api.requestPlayerOwnedGames();
 ---
 
 <Main title="Test page">
-
+	<h1>Test Page</h1>
 </Main>
